// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast default renders 1`] = `
<Connect(ReduxToastr)
  position="top-right"
  transitionIn="fadeIn"
  transitionOut="fadeOut"
/>
`;

exports[`Toast renders with custom position 1`] = `
<Connect(ReduxToastr)
  position="bottom-left"
  transitionIn="fadeIn"
  transitionOut="fadeOut"
/>
`;
